# oasst1-convert

./: .gitignore  README.md  convert.py  pyproject.toml
