[tool.poetry]
name = "oasst1-convert"
version = "0.1.0"
description = ""
authors = ["Seiichi Inoue <d35inou108@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
datasets = "^2.15.0"
pandas = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
